# PDF-RADER

./: .gitattributes  .replit  fix.py  pnpm-lock.yaml  replit.md
.github/workflows/: build-apk.yml  build-native-libs.yml  eas-build.yml  sediJhMm9
attached_assets/: 2026-03-27_19-51-02_debug_log_1774620127786.txt
mobile/: .gitignore  app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx  tools.tsx
mobile/app/components/: MuPdfViewer.tsx  PremiumLoader.tsx  ToolShell.tsx
mobile/app/context/: ContinueContext.tsx
mobile/app/hooks/: usePreselectedFile.ts
mobile/app/screens/: auto-process.tsx  booklet.tsx  compress.tsx  enhance-contrast.tsx  four-up-booklet.tsx  grayscale.tsx  image-reader.tsx  image-to-pdf.tsx  invert.tsx  merge.tsx  nup.tsx  ocr-models.tsx  ocr.tsx  organize.tsx  pdf-to-image.tsx  reader.tsx  remove-pages.tsx  repair.tsx  resize.tsx  rotate.tsx  settings.tsx  split-by-line.tsx  split.tsx  whitener.tsx
mobile/app/utils/: cleanup.ts  docxGenerator.ts  filePicker.ts  geminiService.ts  nativeModules.ts  outputPath.ts  paddleOcrService.ts
mobile/app/utils/__tests__/: filePicker.test.ts
mobile/assets/lottie/: loader.json
mobile/native/: CMakeLists.txt
mobile/native/kotlin/com/pdfpowertools/native/: MuPDFBridge.kt  MuPDFBridgeRNModule.kt  PaddleOCRBridge.kt  PaddleOCRBridgeRNModule.kt  PdfPowerToolsPackage.kt  QPDFBridge.kt  QPDFBridgeRNModule.kt
mobile/native/src/: mupdf_bridge.cpp  paddle_ocr_bridge.cpp  qpdf_bridge.cpp
mobile/plugins/: withPdfNdk.js
scripts/: build_mupdf_only.sh  build_native_libraries.sh
